# microchess

./: .gitignore  LICENSE  README.md  run.sh
.github/workflows/: test.yml
chess/: Cargo.toml
chess-wasm/: Cargo.toml
chess-wasm/src/: lib.rs
chess/src/: chessboard.rs  contract.rs  lib.rs  magic.rs  moves.rs  perft.rs  piece.rs  prng.rs  service.rs  square.rs  state.rs  zobrist.rs
frontend/: bun.lockb  codegen.ts  index.html  package.json  tailwind.config.ts
frontend/src/: App.tsx  const.ts  images.d.ts  index.css  input.css  main.tsx
frontend/src/GraphQL/: URI.ts  graphql.ts  queries.ts
frontend/src/HomePage/: HomePage.tsx  LeaderBoard.tsx
frontend/src/components/: Board.tsx  CBoard.tsx  ChessBoard.tsx  CzBoard.tsx  Files.tsx  Games.tsx  HomePage.tsx  Modal.tsx  Navbar.tsx  Ranks.tsx  Tile.tsx
frontend/src/components/ChessBoard/: Board.tsx  CBoard.tsx  CapturedPieces.tsx  Files.tsx  GeneratePossibleMoves.ts  LeftSideMenu.tsx  PlayButton.tsx  PromotionCard.tsx  Ranks.tsx  RightSideMenu.tsx  Tile.tsx  Timer.tsx  theme.ts  types.ts
frontend/src/components/popup/: PlayerSelect.tsx  Welcome.tsx
frontend/src/context/: ChessProvider.tsx
