[package]
name = "chess"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { version = "=7.0.2", default-features = false }
async-graphql-derive = { version = "=7.0.2", default-features = false }
linera-sdk = "0.11.3"
chess_rs = { version = "0.1.0", path = "../../chess_rs" }
serde = { version = "1.0.203", features = ["derive"] }

[dev-dependencies]
linera-sdk = { version = "0.11.3", features = ["test"] }

[[bin]]
name = "chess_contract"
path = "src/contract.rs"

[[bin]]
name = "chess_service"
path = "src/service.rs"

[profile.release]
debug = true
lto = true
opt-level = 'z'
strip = 'debuginfo'
