[package]
name = "chess"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { version = "=7.0.2", default-features = false }
async-graphql-derive = { version = "=7.0.2", default-features = false }
linera-sdk = { path = "../../linera-protocol/linera-sdk", default-features = false }
serde = { version = "1.0.203", features = ["derive"] }
log = "0.4.22"
lazy_static = "1.5.0"
thiserror = "2.0.1"


[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
linera-sdk = { path = "../../linera-protocol/linera-sdk", default-features = false, features = ["test"]}

[dev-dependencies]
linera-sdk = { path = "../../linera-protocol/linera-sdk", default-features = false, features = ["test"]}

[[bin]]
name = "chess_contract"
path = "src/contract.rs"

[[bin]]
name = "chess_service"
path = "src/service.rs"

[profile.release]
debug = true
lto = true
opt-level = 3
strip = 'debuginfo'

